--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 For this project we want to program nonogram riddles (https://en.wikipedia.org/wiki/Nonogram) in elm.
-The tutorial is already finished and is based on the given wikipedia page.
+The tutorial is half-done and will be finished soon.
 To finish this project we formulated 5 optional and 3 non-optional goals.
 
 Non-optional goals:
